Ajustando layout da tela de Cardápio

--- a/app/src/main/res/layout/activity_cardapio.xml
+++ b/app/src/main/res/layout/activity_cardapio.xml
@@ -38,7 +38,6 @@
                 android:layout_marginStart="230dp"/>
         </LinearLayout>
 
-
         <!--Entradas-->
         <LinearLayout
             android:id="@+id/BtnEntrada"
@@ -48,25 +47,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/entrada"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="265dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -87,26 +93,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/acompanhamentos"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="190dp"
-                    android:layout_gravity="end"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -127,25 +139,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/massas"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="285dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -166,25 +185,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/risotos"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="285dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -205,25 +231,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Carnes"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="185dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -244,25 +277,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/doces"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="185dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -283,25 +323,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Bebidas"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="185dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -322,25 +369,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Vinhos"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="185dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -361,25 +415,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Cervejas"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="185dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
