Ajustando a tela de Reservas

--- a/app/src/main/res/layout/activity_menu_reserva.xml
+++ b/app/src/main/res/layout/activity_menu_reserva.xml
@@ -47,25 +47,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/consultarreservasTitle"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="165dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -86,26 +93,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/reservarTitle"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="130dp"/>
-            </LinearLayout>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -125,26 +138,32 @@
             android:layout_marginTop="20dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/cancelarreservarTitle"
-                    android:layout_marginStart="20dp"
                     android:fontFamily="@font/gabrielaregular"
                     android:textColor="@color/VerdeEscuro"
                     android:layout_gravity="center"
                     android:textSize="16sp"/>
 
-                <ImageView
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrowicon"
-                    android:layout_marginStart="190dp"
-                    android:layout_gravity="end"/>
+                    android:orientation="horizontal"
+                    android:gravity="end">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/arrowicon"/>
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
