--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,10 +44,18 @@
 
     <com.denzcoskun.imageslider.ImageSlider
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="150dp"
         android:id="@+id/image_slider"/>
+
+    <com.denzcoskun.imageslider.ImageSlider
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="350dp"
+        android:id="@+id/image_slider2"/>
 
 </FrameLayout>
