--- a/app/src/main/res/layout/activity_consultar_reserva.xml
+++ b/app/src/main/res/layout/activity_consultar_reserva.xml
@@ -4,17 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConsultarReservaActivity">
+    tools:context=".ConsultarReservaActivity"
+    android:background="@color/FundoClaro">
 
-    <TextView
-        android:id="@+id/listaVaziaConsultaReserva"
+    <!--Header-->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:textColor="@color/black"
-        android:text=""
-        android:fontFamily="@font/gabrielaregular"
-        android:layout_gravity="center_vertical"
-        android:textSize="14sp"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/VerdeEscuro">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Consultar reservas"
+            android:textColor="@color/white"
+            android:layout_marginStart="20dp"
+            android:fontFamily="@font/gabrielaregular"
+            android:layout_gravity="center"
+            android:textSize="18sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_marginRight="10dp">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/imgheader"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/listaVaziaConsultaReserva"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/VerdeEscuro"
+            android:text="Cião! Você possui as seguintes reservas!"
+            android:fontFamily="@font/gabrielaregular"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"/>
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/listaReservas"
