--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -22,12 +22,19 @@
             android:layout_gravity="center"
             android:textSize="18sp"/>
 
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/imgheader"
-            android:layout_gravity="center"
-            android:layout_marginStart="250dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_marginRight="10dp">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/imgheader"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 
