--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="VerdeClaro">#80B67B</color>
     <color name="FundoClaro">#EBE3D4</color>
     <color name="VermelhoClaro">#F35D52</color>
+    <color name="Vermelho">#F44134</color>
 </resources>
